# embedded-cryptography

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.rs  build.sh  cbindgen.toml
dashboard/: README.md  TESTING.md  air_quality_monitor.py  docker-compose.yml  requirements.txt  setup_virtual_uart.sh  simulate_cat_data.py  test_system.sh
dashboard/grafana-provisioning/dashboards/: air_quality_dashboard.json  dashboard.yml
dashboard/grafana-provisioning/datasources/: datasource.yml
examples/e2e/: .clangd  Makefile  README.md  e2e.c
examples/tfhe_u8_bench/: Makefile  bench_u8.c
include/: battery.h
rp2350/: CMakeLists.txt  NOTES.griffon  ZKP_AUTH_COMPLETE.md  ZKP_AUTH_IMPLEMENTATION.md  ZKP_AUTH_README.md  battery_e2e.c  build.sh  lib  test.c
rp2350/app/: CMakeLists.txt  FreeRTOS_CLI.c  FreeRTOS_CLI.h  cli_commands.c  cli_commands.h  ipc.c  ipc.h  main.c  tf_port.c  tf_port.h
rp2350/app/auth/: zkp_auth.c  zkp_auth.h
rp2350/app/cloud/: balvi_config.c  balvi_config.h
rp2350/app/config/: FreeRTOSConfig.h  TF_Config.h  buffer_config.h  lwipopts.h  mbedtls_config.h  psram_config.h
rp2350/app/crypto/: battery_e2e.c  battery_e2e.h  crypto_shared.c  crypto_shared.h
rp2350/app/http/: http_client_util.c  http_client_util.h  http_post_client.c  http_post_client.c.bak  http_post_client.h  httpss_client.c  httpss_client.h
rp2350/src/: CMakeLists.txt  TF_Config.h  http_client_util.c  http_client_util.cmake  ipc.h  lwipopts.h  main.c
rp2350/src/http/: http_client_util.cmake  httpss_client.c  httpss_client.h
src/: debug_ffi.rs  ffi.rs  lib.rs  poly.rs  tfhe.rs
src/zkp/: air.rs  hash.rs  mod.rs
