[package]
name = "battery_embedded"
version = "0.1.0"
edition = "2024"
description = "Minimal no_std TFHE TRLWE public-key encryption and ZKP library"
authors = ["Dan Gulotta (@dgulotta)", "V (@vdrg)"]

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[features]
default = ["std"]        # std by default
std = []                 # enables std
alloc = ["dep:dlmalloc"] # for no_std + alloc -> bring in dlmalloc
ffi = ["alloc"]          # C FFI bindings

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
incremental = false
panic = "abort"

[profile.dev]
# no_std builds require aborting panics; match release profile
panic = "abort"

[dependencies]
rand_chacha = { version = "0.9", default-features = false }
rand = { version = "0.9", default-features = false }
p3-air = "0.3.0"
p3-challenger = "0.3.0"
p3-commit = "0.3.0"
p3-dft = "0.3.0"
p3-field = "0.3.0"
p3-fri = "0.3.0"
p3-keccak = "0.3.0"
p3-koala-bear = "0.3.0"
p3-matrix = "0.3.0"
p3-merkle-tree = "0.3.0"
p3-poseidon2 = "0.3.0"
p3-poseidon2-air = "0.3.0"
p3-symmetric = "0.3.0"
p3-uni-stark = "0.3.0"
dlmalloc = { version = "0.2", default-features = false, features = ["global"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-big-array = "0.5"

[build-dependencies]
cbindgen = "0.29"
